--- a/pages/updateSensor.html
+++ b/pages/updateSensor.html
@@ -25,6 +25,13 @@
     <br>
     <br>
     <br>
+    <span>Current Alert Phone Number:</span>
+    <span id="sensorPhone"></span>
+    <p>New Alert Phone Number:</p>
+    <input id="newSensorPhoneInput" type=number>
+    <br>
+    <br>
+    <br>
     <button id="submit">Submit</button>
 
     <script src="../js/fetchProfile.js"></script>
